@@ -1,3 +1,8 @@
+2007-06-13  J. Tang  <jtang@tresys.com>
+
+	* libseaudit/src/log.c (seaudit_log_clear): Added ability to clear
+	a log of its messages.
+
 2007-06-12  J. Tang  <jtang@tresys.com>
 
 	* SETools now requires libsqlite3, version 3.2.0 or greater.  It
